<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background_img"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:src="@mipmap/img"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/media_position"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/media_position"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/player_status"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/status_init"
            android:textSize="18dp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/play_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="00:00"/>

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

        <TextView
            android:id="@+id/music_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="00:00"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_left"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:text="@string/button_left_play"/>

        <Button
            android:id="@+id/button_middle"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/button_middle"/>

        <Button
            android:id="@+id/button_right"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:text="@string/button_right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    </LinearLayout>

</LinearLayout>
